--- a/humpsub-website/index.html
+++ b/humpsub-website/index.html
@@ -176,7 +176,7 @@
         </a> -->
     </section>
 
-    <!-- Portfolio -->
+    <!-- Photo Gallery / Portfolio -->
     <section id="portfolio" class="portfolio">
         <div class="container center text-center">
             <h2 class="display-3">Photo Gallery</h2>
