Fixed picture gallery resizing problem

--- a/humpsub-website/index.html
+++ b/humpsub-website/index.html
@@ -182,10 +182,10 @@
             <h2 class="display-3">Photo Gallery</h2>
             <hr class="small">
             <div class="row center">
-                <div class="col-sm-3" ng-repeat="item in portfolio track by $index">
+                <div class="col-sm-4" ng-repeat="item in portfolio track by $index">
                     <div class="portfolio-item">
-                        <a href="#">
-                            <img class="img-portfolio img-responsive" src="{{item.src}}" style="height: 30vh;">
+                        <a href="javascript:(0);">
+                            <img class="img-portfolio img-responsive" src="{{item.src}}">
                         </a>
                     </div>
                 </div>
