swapped out hps logo for png version

--- a/humpsub-website/index.html
+++ b/humpsub-website/index.html
@@ -104,7 +104,7 @@
             <div class="spacer" style="height: 1.5vh;"></div>
             <h2 class="display-4">Welcome, to UW Human Powered Sub.</h2>
 
-            <img src="img/hps-logo.jpg" height="auto" width="128px">
+            <img src="img/hps-logo.png" height="auto" width="128px">
             <div class="spacer" style="height:5px;"></div>
             <a href="#services" id="about-next-button"><i class="fa fa-angle-down fa-5x" style="color:#333;"></i></a>
             <!-- <div class="spacer" style="height: 30px;"></div> -->
