More small changes

--- a/humpsub-website/index.html
+++ b/humpsub-website/index.html
@@ -136,7 +136,6 @@
             </a>
         </div>
         <!-- /.container -->
-        </div>
     </section>
 
     <!-- Random Pop-up Info Panel -->
@@ -241,8 +240,8 @@
     <!-- "Spnsrs" -->
     <section id="spnsr" class="container text-center">
         <!-- <input type="text" name="SpnsrName" ng-model="SpnsrName"><br> -->
-        <h2 class="display-3 standout-text-light"> Huge Shoutout To Our Sponsors!</h1>
-        <h3 class="display-4 standout-text-light">We Couldn't Do It Without Your Support!</h2>
+        <h2 class="display-3 standout-text-light"> Huge Shoutout To Our Sponsors!</h2>
+        <h3 class="display-4 standout-text-light">We Couldn't Do It Without Your Support!</h3>
         <div id="special" class="row">
             <div ng-repeat="spnsr in spnsrArr track by $index" class="spnsr-logo">
                 <a href="{{spnsr.link}}">
@@ -259,27 +258,25 @@
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center" >
                     <h4><strong>Contact Us</strong></h4>
-                    <p>Mechanical Engineering Department,
-                        <br>Seattle, Washington, 98105</p>
-                        <ul class="list-unstyled">
-                            <li><i class="fa fa-envelope-o fa-fw" ></i> <a href="mailto:uwhpsub@gmail.com">uwhpsub@gmail.com</a>
-                            </li>
-                        </ul>
-                        <br>
-                        <ul class="list-inline">
-                            <li>
-                                <a href="https://www.facebook.com/uwhps/"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
-                            </li>
-                            <li>
-                                <a href="https://www.instagram.com/uwhps/"><i class="fa fa-instagram fa-fw fa-3x"></i></a>
-                            </li>
-                            <li>
-                                <a href="https://www.youtube.com/user/UWHPSub"><i class="fa fa-youtube fa-fw fa-3x"></i></a>
-                            </li>
-                        </ul>
-                        <hr class="small">
-                        <p>Created By: Varun Viswanath 2016</p>
-                    </div>
+                    <p>Mechanical Engineering Department,<br>Seattle, Washington, 98105</p>
+                    <ul class="list-unstyled">
+                        <li><i class="fa fa-envelope-o fa-fw" ></i> <a href="mailto:uwhpsub@gmail.com">uwhpsub@gmail.com</a>
+                        </li>
+                    </ul>
+                    <br>
+                    <ul class="list-inline">
+                        <li>
+                            <a href="https://www.facebook.com/uwhps/"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://www.instagram.com/uwhps/"><i class="fa fa-instagram fa-fw fa-3x"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://www.youtube.com/user/UWHPSub"><i class="fa fa-youtube fa-fw fa-3x"></i></a>
+                        </li>
+                    </ul>
+                    <hr class="small">
+                    <p>Created By: Varun Viswanath 2016</p>
                 </div>
             </div>
         </div>
